--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ dependencies = [
   "gunicorn ~=23.0",
   "whitenoise ~=6.7",
   "django-extensions>=3.2.3",
-  "nutstosoup>=0.2.0",
+  "nutstosoup @ https://github.com/tiktuk/nutstosoup.git",
 ]
 
 [dependency-groups]
