--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ dependencies = [
   "whitenoise ~=6.7",
   "django-extensions>=3.2.3",
   "nutstosoup @ https://github.com/tiktuk/nutstosoup.git",
+  "environs>=14.1.0",
+  "dj-database-url>=2.3.0",
 ]
 
 [dependency-groups]
