--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,4 +19,4 @@ services:
       DJANGO_SETTINGS_MODULE: "django_project.settings"
     profiles:
       - prod
-    command: gunicorn django_project.wsgi:application --bind 0.0.0.0:8000 --workers 2
+    command: uv run .venv/bin/gunicorn django_project.wsgi:application --bind 0.0.0.0:8000 --workers 2
