--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
   "nutstosoup @ https://github.com/tiktuk/nutstosoup.git",
   "environs>=14.1.0",
   "dj-database-url>=2.3.0",
+  "django-ninja>=1.3.0",
 ]
 
 [dependency-groups]
